Associate markdown mode with markdown files

--- a/alanz.org
+++ b/alanz.org
@@ -17,6 +17,11 @@ blah
 
 
 (starter-kit-install-if-needed 'markdown-mode)
+(autoload 'markdown-mode "markdown-mode"
+       "Major mode for editing Markdown files" t)
+(add-to-list 'auto-mode-alist '("\\.text\\'" . markdown-mode))
+(add-to-list 'auto-mode-alist '("\\.markdown\\'" . markdown-mode))
+(add-to-list 'auto-mode-alist '("\\.md\\'" . markdown-mode))
 
 ;; org
 (starter-kit-install-if-needed 'org)
