--- a/alanz.org
+++ b/alanz.org
@@ -29,8 +29,23 @@ blah
 
 ;; god-mode, see http://chrisdone.com/posts/god-mode
 ;; https://github.com/chrisdone/god-mode
+;; https://github.com/chrisdone/chrisdone-emacs/blob/master/config/god.el
 (starter-kit-install-if-needed 'god-mode)
+(global-set-key (kbd "C-x C-1") 'delete-other-windows)
+(global-set-key (kbd "C-x C-2") 'split-window-below)
+(global-set-key (kbd "C-x C-3") 'split-window-right)
 (global-set-key (kbd "<escape>") 'god-mode-all)
+
+(defun god-update-cursor ()
+  "Update my cursor."
+  (setq cursor-type (if (or god-local-mode buffer-read-only)
+                        'box
+                      'bar)))
+
+(add-hook 'god-mode-enabled-hook 'god-update-cursor)
+(add-hook 'god-mode-disabled-hook 'god-update-cursor)
+
+
 
 ;; yaml
 (starter-kit-install-if-needed 'yaml-mode)
