--- a/starter-kit/starter-kit-defuns.org
+++ b/starter-kit/starter-kit-defuns.org
@@ -36,7 +36,7 @@ a lambda doesn't already exist in the list.
 
 #+name: start-kit-add-local-comment-auto-fill
 #+begin_src emacs-lisp
-(add-hook 'starter-kit-coding-hook 'starter-kit-local-comment-auto-fill)
+;;(add-hook 'starter-kit-coding-hook 'starter-kit-local-comment-auto-fill)
 #+end_src
 
 #+name: starter-kit-add-pretty-lambdas
